# pixelate_image

./: .gitmodules  CMakeLists.txt
pixelate_image/: CMakeLists.txt  main.c
